Minor changes to digital demensions code. Working on a few issues. I am having a bug with the scroll to top so I just kept it hidden for now. Also wanted to make some affects where the about section fades in so I started setting up that code. For now I just have the about section visible.

--- a/canvas-and-code/public/templates/Digital_Dimensions/style.css
+++ b/canvas-and-code/public/templates/Digital_Dimensions/style.css
@@ -54,7 +54,7 @@ body, html {
     align-items: center;
     flex-wrap: wrap;
     transform: translateY(50px);
-    opacity: 0;
+    opacity: 1;
     transition: all 1s ease;
 }
 
